# psm-blogs

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
core/: admin.py  apps.py  forms.py  models.py  views.py
core/migrations/: 0009_remove_post_video_remove_post_video_duration_and_more.py  0010_post_show_on_homepage.py  0011_remove_post_show_on_homepage.py  0012_post_category_post_location.py  0013_remove_post_category_remove_post_location.py  0014_category_post_category.py  0015_category_date_alter_category_image.py  0016_alter_category_description_alter_category_name.py  0017_competition_submission.py  0018_competition_date_posted.py
core/project/: gcloud.py  settings.py  urls.py  wsgi.py
core/staticfiles/: staticfiles.json
core/staticfiles/css/: admin.css  main.css  posts.73fb1b21a024.css
core/templates/core/: competition_list.html  index.html  post_confirm_delete.html  post_detail.html  post_form.html  subscribe.html  terms.html  unsubscribe.html  (+1 more)
emails/: admin.py  forms.py  models.py  urls.py  views.py
emails/migrations/: 0001_initial.py
staticfiles/css/: styles.css
submit/: admin.py  forms.py  models.py  urls.py  views.py
submit/migrations/: 0006_servicepicture.py  0007_servicepicture_description_servicepicture_price_and_more.py  0008_remove_servicepicture_description_and_more.py  0009_alter_profile_category.py  0010_profile_user_type_alter_profile_category.py  0011_alter_profile_image.py  0012_booking.py  0013_remove_profile_user_type.py  0014_remove_service_profile_remove_servicepicture_profile_and_more.py
(+14 files in other folders)
